Add flash partial, and add flash redirect.

--- a/app/views/mutedphrases/results.html.erb
+++ b/app/views/mutedphrases/results.html.erb
@@ -1,6 +1,11 @@
 <section>
   <%=link_to("Show Tweets", show_tweets_mutedphrases_path) %>
   <%=link_to("Mute Phrase", mutedphrases_path) %>
+  <%=link_to("Back to Search", new_mutedphrase_path) %>
+
+  <p>
+    There are currently <%= @results.length %> people tweeting about "<%= @phrase %>" on your timeline.
+  </p>
 
   <% @results.each do |tweet| %>
   <section>
@@ -8,7 +13,7 @@
     <h3>
       Username: <%= tweet.user.screen_name %>
     </h3>
-    
+
     <%= image_tag(tweet.user.profile_image_url) %>
 
   </section>
@@ -16,5 +21,6 @@
 
   <%=link_to("Show Tweets", show_tweets_mutedphrases_path) %>
   <%=link_to("Mute Phrase", mutedphrases_path) %>
+  <%=link_to("Back to Search", new_mutedphrase_path) %>
 
 </section>
