--- a/app/views/mutedphrases/show_tweets.html.erb
+++ b/app/views/mutedphrases/show_tweets.html.erb
@@ -1,5 +1,10 @@
 <section>
   <%=link_to("Mute Phrase", mutedphrases_path) %>
+  <%=link_to("Back to Search", new_mutedphrase_path) %>
+
+  <p>
+    There are currently <%= @results.length %> people tweeting about "<%= @phrase %>" on your timeline.
+  </p>
 
   <% @results.each do |tweet| %>
     <section>
@@ -16,5 +21,6 @@
     </section>
   <% end %>
   <%=link_to("Mute Phrase", mutedphrases_path) %>
+  <%=link_to("Back to Search", new_mutedphrase_path) %>
 
 </section>
