--- a/app/views/mutedphrases/show_tweets.html.erb
+++ b/app/views/mutedphrases/show_tweets.html.erb
@@ -1,4 +1,5 @@
 <section>
+  <%=link_to("Home", mutedphrases_path) %>
   <%=link_to("Mute Phrase", mutedphrases_path) %>
   <%=link_to("Back to Search", new_mutedphrase_path) %>
 
