--- a/app/views/mutedphrases/show_tweets.html.erb
+++ b/app/views/mutedphrases/show_tweets.html.erb
@@ -21,7 +21,7 @@
 
     </section>
   <% end %>
-  <%=link_to("Mute Phrase", mutedphrases_path) %>
+  <%=link_to("Mute Phrase", mutedphrases_path, method: :post) %>
   <%=link_to("Back to Search", new_mutedphrase_path) %>
 
 </section>
