Add title of app to application layout.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <section>
+      <h1>Mute Twitter Spoilers</h1>
+    </section>
     <%= render "layouts/navbar" %>
     <%= yield %>
   </body>
