--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,20 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2/semantic.min.css' %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2/semantic.min.js" %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" %>
+
   </head>
 
   <body>
     <section>
-      <h1>Mute Twitter Spoilers</h1>
+      <section class="ui middle aligned center aligned grid">
+        <div class="column">
+          <h1>Mute Twitter Spoilers</h1>
+
+        </div>
+      </section>
     </section>
     <%= render "layouts/navbar" %>
     <%= yield %>
