--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
       <section class="ui middle aligned center aligned grid">
         <div class="column">
           <h1>Mute Twitter Spoilers</h1>
-
+          <p>
+            Quickly mute multiple followers that are tweeting spoilers on your timeline.
+          </p>
         </div>
       </section>
     </section>
