--- a/app/views/mutedphrases/show_tweets.html.erb
+++ b/app/views/mutedphrases/show_tweets.html.erb
@@ -1,27 +1,30 @@
 <section>
-  <%=link_to("Home", mutedphrases_path) %>
-  <%=link_to("Mute Phrase", mutedphrases_path) %>
-  <%=link_to("Back to Search", new_mutedphrase_path) %>
+  <%= render "layouts/show_tweets_menu" %>
+  <br />
 
-  <p>
-    There are currently <%= @results.length %> people tweeting about "<%= @phrase %>" on your timeline.
-  </p>
+  <section class="ui compact message">
+    <p class="header">
+      There are currently <%= @results.length %> people tweeting about "<%= @phrase %>" on your timeline.
+    </p>
+  </section>
 
   <% @results.each do |tweet| %>
-    <section>
-      <h3>
-        Username: <%= tweet.user.screen_name %>
-      </h3>
-
-      <%= image_tag(tweet.user.profile_image_url) %>
-
-      <p>
-        Tweet: <%= tweet.text %>
-      </p>
-
+  <section class="ui grid">
+    <section class="ui list">
+      <section class="item three wide">
+        <%= image_tag(tweet.user.profile_image_url, class: "ui avatar image") %>
+        <section class="content three wide">
+          <h3 class="header">
+            Username: <%= tweet.user.screen_name %>
+          </h3>
+          <article class="description">
+            Tweet: <%= tweet.text %>
+          </article>
+        </section>
+      </section>
     </section>
+  </section>
   <% end %>
-  <%=link_to("Mute Phrase", mutedphrases_path, method: :post) %>
-  <%=link_to("Back to Search", new_mutedphrase_path) %>
-
+  <br />
+  <%= render "layouts/show_tweets_menu" %>
 </section>
