--- a/app/views/mutedphrases/new.html.erb
+++ b/app/views/mutedphrases/new.html.erb
@@ -1,9 +1,9 @@
 <%= render "layouts/flash" %>
 
-<%=link_to("Home", mutedphrases_path) %>
+  <%= form_tag(results_mutedphrases_path, method: "get", class: "ui middle aligned center aligned grid") do %>
+  <%=link_to("Home", mutedphrases_path, class: "ui primary button") %>
 
-<%= form_tag(results_mutedphrases_path, method: "get") do %>
-  <%= label_tag(:q, "What spoiler phrase do you want to mute?") %> <br />
-   <%= text_field_tag(:phrase) %>
-  <%= submit_tag("Search") %>
-<% end %>
+    <%= label_tag(:q, "What spoiler phrase do you want to mute?") %> <br />
+     <%= text_field_tag(:phrase) %>
+    <%= submit_tag("Search") %>
+  <% end %>
