--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
           <p>
             Quickly mute multiple followers that are tweeting spoilers on your timeline.
           </p>
+            <%= render "layouts/flash" %>
         </div>
       </section>
     </section>
